# rustransomware

./: Cargo.toml  README.md
src/: image.b64  main.rs
